Add support for multiple return values